Add PlaceAdapter and other changes

--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <TextView
+        android:id="@+id/recyclerViewTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10sp"
         android:text="TEST"
-        android:textSize="24sp"
         android:textColor="@color/teal_200"
-        android:layout_margin="10sp">
-    </TextView>
+        android:textSize="24sp"></TextView>
 
 
 </LinearLayout>
